// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prw e2e > reports a missing script list for named packages with no scripts 1`] = `
"
│
◇  Select package
│  @edge/no-scripts
No scripts in @edge/no-scripts"
`;

exports[`prw e2e > reports a missing script list for unnamed packages 1`] = `
"
│
◇  Select package
│  apps/unnamed
No scripts in apps/unnamed"
`;

exports[`prw e2e > reports an error when launched completely outside a workspace 1`] = `
"
Run prw inside a pnpm workspace."
`;

exports[`prw e2e > shows help when --help is passed 1`] = `
"
Interactive pnpm workspace package & script runner (prw v0.0.0-test)

USAGE prw [OPTIONS] [PACKAGE] [SCRIPT]

ARGUMENTS

  PACKAGE    Package name or fuzzy search query
   SCRIPT    Script name to run in the selected package

OPTIONS

     -h, --help    Show help
  -v, --version    Show version number"
`;

exports[`prw e2e > shows the filtered package picker for the query "a" 1`] = `
"
│
◆  Select package
│
│  Search: _
│  ● @large/admin (apps/admin)
│  ○ @large/api
│  ○ @large/config
│  ○ @large/dashboard
│  ○ @large/logger
│  ○ @large/mobile
│  ○ @large/types
│  ○ @large/ui
│  ○ @large/utils
│  ○ @large/web
│  ↑/↓ to select • Enter: confirm • Type: to search
└"
`;

exports[`prw e2e > shows the minimal script picker in edge-cases workspace 1`] = `
"
│
◇  Select package
│  @edge/minimal
│
◆  Select script
│
│  Search: _
│  ● build (echo '📦 Building @edge/minimal...')
│  ↑/↓ to select • Enter: confirm • Type: to search
└"
`;

exports[`prw e2e > shows the minimal script picker while searching for "build" 1`] = `
"
│
◇  Select package
│  @edge/minimal
│
◆  Select script
│
│  Search: build█
│  ● build (echo '📦 Building @edge/minimal...')
│  ↑/↓ to select • Enter: confirm • Type: to search
└"
`;

exports[`prw e2e > shows the minimal script picker while searching for "zzz" 1`] = `
"
│
◇  Select package
│  @edge/minimal
│
◆  Select script
│
│  Search: zzz█ (0 matches)
│  No matches found
│  ↑/↓ to select • Enter: confirm • Type: to search
└"
`;

exports[`prw e2e > shows the package picker cancellation state 1`] = `
"
│
■  Select package
│
Cancelled."
`;

exports[`prw e2e > shows the package picker for the large workspace 1`] = `
"
│
◆  Select package
│
│  Search: _
│  ● (root)
│  ○ @large/admin
│  ○ @large/api
│  ○ @large/config
│  ○ @large/dashboard
│  ○ @large/logger
│  ○ @large/mobile
│  ○ @large/types
│  ○ @large/ui
│  ○ @large/utils
│  ○ @large/web
│  ↑/↓ to select • Enter: confirm • Type: to search
└"
`;

exports[`prw e2e > shows the package picker when launched from inside a workspace subdirectory 1`] = `
"
│
◆  Select package
│
│  Search: _
│  ● (root)
│  ○ @simple/api
│  ○ @simple/web
│  ↑/↓ to select • Enter: confirm • Type: to search
└"
`;

exports[`prw e2e > shows the package picker while searching for "web" 1`] = `
"
│
◆  Select package
│
│  Search: web█ (1 match)
│  ● @large/web (apps/web)
│  ↑/↓ to select • Enter: confirm • Type: to search
└"
`;

exports[`prw e2e > shows the package picker while searching for "zzz" 1`] = `
"
│
◆  Select package
│
│  Search: zzz█ (0 matches)
│  No matches found
│  ↑/↓ to select • Enter: confirm • Type: to search
└"
`;

exports[`prw e2e > shows the root script picker 1`] = `
"
│
◇  Select package
│  (root)
│
◆  Select script
│
│  Search: _
│  ● build (pnpm -r run build)
│  ○ dev
│  ○ prw
│  ↑/↓ to select • Enter: confirm • Type: to search
└"
`;

exports[`prw e2e > shows the script picker cancellation state 1`] = `
"
│
◇  Select package
│  @simple/web
│
■  Select script
│
Cancelled."
`;

exports[`prw e2e > shows the script picker for simple workspace package selection 1`] = `
"
│
◇  Select package
│  @simple/web
│
◆  Select script
│
│  Search: _
│  ● build (echo '📦 @simple/web building...')
│  ○ dev
│  ○ test
│  ○ type-check
│  ↑/↓ to select • Enter: confirm • Type: to search
└"
`;

exports[`prw e2e > shows the simple workspace script picker while searching for "build" 1`] = `
"
│
◇  Select package
│  @simple/web
│
◆  Select script
│
│  Search: build█ (1 match)
│  ● build (echo '📦 @simple/web building...')
│  ↑/↓ to select • Enter: confirm • Type: to search
└"
`;

exports[`prw e2e > shows the simple workspace script picker while searching for "dev" 1`] = `
"
│
◇  Select package
│  @simple/web
│
◆  Select script
│
│  Search: dev█ (1 match)
│  ● dev (echo '🚀 @simple/web dev starting...')
│  ↑/↓ to select • Enter: confirm • Type: to search
└"
`;

exports[`prw e2e > shows the simple workspace script picker while searching for "test" 1`] = `
"
│
◇  Select package
│  @simple/web
│
◆  Select script
│
│  Search: test█ (1 match)
│  ● test (echo '✓ All tests passed')
│  ↑/↓ to select • Enter: confirm • Type: to search
└"
`;

exports[`prw e2e > shows the simple workspace script picker while searching for "type-check" 1`] = `
"
│
◇  Select package
│  @simple/web
│
◆  Select script
│
│  Search: type-check█ (1 match)
│  ● type-check (echo '✓ Type check passed')
│  ↑/↓ to select • Enter: confirm • Type: to search
└"
`;

exports[`prw e2e > shows the simple workspace script picker while searching for "zzz" 1`] = `
"
│
◇  Select package
│  @simple/web
│
◆  Select script
│
│  Search: zzz█ (0 matches)
│  No matches found
│  ↑/↓ to select • Enter: confirm • Type: to search
└"
`;
